<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/Home"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_home" />

    <ImageButton
        android:id="@+id/Pesquisar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/Pesquisar"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_pesquisar" />

    <TextView
        android:id="@+id/text_atendimentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/Atendimento"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/Pesquisar"
        app:layout_constraintStart_toEndOf="@+id/Home"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>