<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="154dp"
        android:layout_height="129dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo_colorida"
        android:contentDescription="@string/app_name"/>

    <ImageButton
        android:id="@+id/img_notificacao"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/notificacao"
        app:layout_constraintEnd_toStartOf="@+id/img_perfil"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_notificacao" />

    <ImageButton
        android:id="@+id/img_perfil"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@color/white"
        android:contentDescription="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/img_notificacao"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_perfil" />

    <ImageButton
        android:id="@+id/img_atendimento"
        android:layout_width="319dp"
        android:layout_height="174dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_buttons"
        android:contentDescription="@string/Atendimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:srcCompat="@drawable/img_atendimento" />

    <ImageButton
        android:id="@+id/img_estoque"
        android:layout_width="319dp"
        android:layout_height="174dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/shape_buttons"
        android:contentDescription="@string/estoque"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_atendimento"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_estoque" />

    <TextView
        android:id="@+id/text_atendimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Atendimento"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_atendimento"
        app:layout_constraintEnd_toEndOf="@+id/img_atendimento"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/img_atendimento"
        app:layout_constraintTop_toTopOf="@+id/img_atendimento"
        app:layout_constraintVertical_bias="0.896" />

    <TextView
        android:id="@+id/text_estoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estoque"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_estoque"
        app:layout_constraintEnd_toEndOf="@+id/img_estoque"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/img_estoque"
        app:layout_constraintTop_toTopOf="@+id/img_estoque"
        app:layout_constraintVertical_bias="0.883" />


</androidx.constraintlayout.widget.ConstraintLayout>