<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/img_voltar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_voltar" />

    <FrameLayout
        android:layout_width="378dp"
        android:layout_height="606dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_atendimentos">

    </FrameLayout>

    <TextView
        android:id="@+id/text_atendimentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/Atendimento"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/img_pesquisar"
        app:layout_constraintStart_toEndOf="@+id/img_voltar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/img_pesquisar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/Pesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toEndOf="@+id/text_atendimentos"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_alterar" />
</androidx.constraintlayout.widget.ConstraintLayout>